--- a/youtube-UI/package.json
+++ b/youtube-UI/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
     "conditionals": "^0.1.6",
+    "dompurify": "^2.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/dompurify": "^2.2.2"
   }
 }
